Unit tests added for LetscoKafkaListener and OpfabPublisherComponent